# piicatcher

./: .coveragerc  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  Pipfile  README.md  build_image.sh  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.chglog/: config.yml
.circleci/: config.yml
.github/workflows/: ci.yml  docker-build.yml  publish.yml
docker/: Dockerfile  build_image.sh
docs/source/: conf.py  index.rst
example/: api.py  requirements.txt
piicatcher/: __init__.py  api.py  app_state.py  cli.py  command_line.py  config.py  dbexplorer.py  dbinfo.py  dbmetadata.py  detectors.py  generators.py  log_mixin.py  output.py  piitypes.py  scanner.py  tokenizer.py
piicatcher/catalog/: PiiTypeField.py  __init__.py  db.py  file.py  glue.py  pii_type_field.py
piicatcher/db/: aws.py  explorer.py  metadata.py
piicatcher/explorer/: aws.py  databases.py  explorer.py  files.py  metadata.py  snowflake.py  sqlite.py
piicatcher/files/: explorer.py
piicatcher/orm/: migrations.py  models.py  orm.py
piicatcher/store/: PiiTypeField.py  db.py  glue.py  models.py
tests/: conftest.py  docker-compose.yml  test_api.py  test_awsexplorer.py  test_cli.py  test_command_line.py  test_config.py  test_config_file.py  test_databases.py  test_dbexplorer.py  test_dbinfo.py  test_dbmetadata.py  test_detectors.py  test_explorer.py  test_file_explorer.py  test_filestore.py  test_generators.py  test_glue.py  test_incremental.py  test_models.py  test_output.py  test_regexscanner.py  test_sample_data_2.py  test_sample_database.py  test_scanner.py  test_sqlite.py
tests/samples/: sample-data.csv
