[tool.poetry]
name = "piicatcher"
version = "0.15.0"
description = "Find PII data in databases"
authors = ["Tokern <info@tokern.io>"]
license = "Apache 2.0"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Topic :: Database",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=["pii","postgres","snowflake","redshift","glue"]
readme="README.md"
homepage="https://tokern.io/"
repository="https://github.com/tokern/piicatcher/"


[tool.poetry.dependencies]
python = "^3.8"
spacy = "*"
pyyaml = "*"
click = "*"
python-json-logger = "^2.0.2"
commonregex = "^1.5.3"
dbcat = "~0.8.0"
typer = "^0.4.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
codecov = "*"
pytest-pylint = "*"
twine = "*"
pytest-mock = "*"
pipenv-setup = "*"
types-PyMySQL = "^1.0.2"
types-python-dateutil = "^0.1.6"
types-PyYAML = "^5.4.6"
pytest-cases = "^3.6.4"
types-tabulate = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
piicatcher = "piicatcher.command_line:app"
