[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files=piicatcher,test
ignore_missing_imports=true